|
Quick Lists
|
|
Bug ID:
|
6773078
|
|
Votes
|
0
|
|
Synopsis
|
UseCompressedOops: assert(kid == 0L || s->_leaf->in(0) == 0L,"internal operands have no control")
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b08),
7(b41) (Bug ID:2170013)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
18-NOV-2008
|
|
Description
|
% gamma -XX:-CheckCompressedOops -XX:+UseCompressedOops -Xss256k -verify -XX:+CompileTheWorld -Xbootclasspath/p:rt.jar
CompileTheWorld (13) : com/sun/activation/registries/LineTokenizer
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/matcher.cpp:1641
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/share/vm/opto/matcher.cpp:1641), pid=16772, tid=9
# Error: assert(kid == 0L || s->_leaf->in(0) == 0L,"internal operands have no control")
#
# Java VM: OpenJDK 64-Bit Server VM (14.0-b06-internal-jvmg mixed mode solaris-amd64 compressed oops)
# An error report file with more information is saved as:
# /export/home/kvn/work2/build/6766316/solaris_amd64_compiler2/jvmg/hs_err_pid16772.log
#
Posted Date : 2008-11-18 19:11:00.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/87559db65269
Posted Date : 2008-11-19 02:44:18.0
The regression introduced by 6462850 changes.
Posted Date : 2008-11-19 02:51:48.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |