6773078: UseCompressedOops: assert(kid == 0L || s->_leaf->in(0) == 0L,"internal operands have no control")

Don't set the control edge of a klass load node.

Reviewed-by: never